--- a/projects/index.html
+++ b/projects/index.html
@@ -136,7 +136,7 @@
  <!-- Project 2 -->
                         <div class="grid-sizer"></div>
                         <div class="grid-item">
-                            <a href="projects/2_project/">
+                            <a href="https://floritazhao.github.io/projects/2_project/index.html">
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
@@ -181,7 +181,7 @@
       <!-- Project 4 -->
                              <div class="grid-sizer"></div>
                         <div class="grid-item">
-                            <a href="https://unsplash.com" rel="external nofollow noopener" target="_blank">
+                            <a href="https://floritazhao.github.io/projects/4_project/index.html" rel="external nofollow noopener" target="_blank">
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
@@ -205,7 +205,7 @@
      <!-- Project 5 -->
                              <div class="grid-sizer"></div>
                         <div class="grid-item">
-                            <a href="https://unsplash.com" rel="external nofollow noopener" target="_blank">
+                            <a href="https://floritazhao.github.io/projects/5_project/index.html" rel="external nofollow noopener" target="_blank">
                                 <div class="card hoverable">
                                     <figure>
                                         <picture>
